argocd/base/node-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered-service
  labels:
    app: nodered
spec:
  selector:
    app: nodered
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
  type: ClusterIP
